--- a/common.css
+++ b/common.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;  /* I choose this font family  from Google Fonts
     font-weight: 600;
     font-style: normal;
   }
